# Helios

./: CMakeLists.txt  README.md
scenes/: box.dae  bunny.dae  bunny.fbx
src/: bxdf.cpp  bxdf.h  camera.cpp  camera.h  entity.h  integrator.cpp  integrator.h  light.cpp  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  spectrum.h
src/Camera/: Camera.cpp  Camera.h
src/Core/: ColorSpace.cpp  ColorSpaces.h  Globals.h  RayHitRecord.h  Spectrum.h  Types.h
src/Integrator/: Integrator.cpp  Integrator.h
src/Light/: Light.cpp  Light.h
src/Material/: Bxdf.cpp  Bxdf.h  Material.cpp  Material.h
src/Scene/: Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  TriangleMesh.cpp  TriangleMesh.h
src/Texture/: Texture.cpp  Texture.h
test_scenes/box/: box.gltf
test_scenes/bunny/: bunny.gltf
